Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-35833

Assertion `marked_for_read()' failed after DELETE/UPDATE from table with virtual columns

    XMLWordPrintable

Details

    Description

      CREATE TABLE t1 ( 
        id int , 
        v2 int AS (id) ,
        v3 int AS (id+0) ,
        a1 int AS (v2 + v3),
        KEY a1 (a1)
      );
      DELETE FROM t1 WHERE v2 +v3 > 'a' ;
      

      mariadbd: /src/sql/field.cc:2313: virtual my_decimal* Field_int::val_decimal(my_decimal*): Assertion `marked_for_read()' failed.
      250113 18:06:38 [ERROR] mysqld got signal 6 ;
       
      Server version: 11.8.0-MariaDB-debug-log source revision: 75773e1d28877d7f3c4599b554921c472adcc6bb
       
      /lib/x86_64-linux-gnu/libc.so.6(+0x33fd6)[0x7f094d045fd6]
      sql/field.cc:2314(Field_int::val_decimal(my_decimal*))[0x56298b16b210]
      sql/my_decimal.cc:387(my_decimal::my_decimal(Field*))[0x56298b67c977]
      sql/sql_type.h:5203(Type_handler_decimal_result::stored_field_cmp_to_item(THD*, Field*, Item*) const)[0x56298acdafc6]
      sql/item.cc:10419(stored_field_cmp_to_item(THD*, Field*, Item*))[0x56298b2b53d0]
      sql/opt_range.cc:2016(SEL_ARG_GT::SEL_ARG_GT(THD*, unsigned char const*, KEY_PART const*, Field*, Item*))[0x56298a4f39d7]
      sql/opt_range.cc:9495(Field::stored_field_make_mm_leaf(RANGE_OPT_PARAM*, KEY_PART*, scalar_comparison_op, Item*))[0x56298a4a76eb]
      sql/opt_range.cc:9424(Field::get_mm_leaf_int(RANGE_OPT_PARAM*, KEY_PART*, Item_bool_func const*, scalar_comparison_op, Item*, bool))[0x56298a4a6b4c]
      sql/field.h:2626(Field_int::get_mm_leaf(RANGE_OPT_PARAM*, KEY_PART*, Item_bool_func const*, scalar_comparison_op, Item*))[0x56298ace4023]
      sql/opt_range.cc:9205(Item_bool_func::get_mm_leaf(RANGE_OPT_PARAM*, Field*, KEY_PART*, Item_func::Functype, Item*))[0x56298a4a455e]
      sql/opt_range.cc:9022(Item_bool_func::get_mm_parts(RANGE_OPT_PARAM*, Field*, Item_func::Functype, Item*))[0x56298a4a2264]
      sql/item_cmpfunc.h:514(Item_bool_func2_with_rev::get_func_mm_tree(RANGE_OPT_PARAM*, Field*, Item*))[0x56298a4e75aa]
      sql/opt_range.cc:8681(Item_bool_func::get_full_func_mm_tree(RANGE_OPT_PARAM*, Item_field*, Item*))[0x56298a49ea96]
      sql/item_cmpfunc.h:219(Item_bool_func::get_full_func_mm_tree_for_args(RANGE_OPT_PARAM*, Item*, Item*))[0x56298a4e6cad]
      sql/item_cmpfunc.h:542(Item_bool_func2_with_rev::get_mm_tree(RANGE_OPT_PARAM*, Item**))[0x56298a4e79b6]
      sql/opt_range.cc:2942(SQL_SELECT::test_quick_select(THD*, Bitmap<64u>, unsigned long long, unsigned long long, bool, bool, bool, bool, Item_func::Bitmap))[0x56298a479375]
      sql/opt_range.h:1909(SQL_SELECT::check_quick(THD*, bool, unsigned long long, Item_func::Bitmap))[0x56298a72f457]
      sql/sql_delete.cc:557(Sql_cmd_delete::delete_from_single_table(THD*))[0x56298a71f8a5]
      sql/sql_delete.cc:1891(Sql_cmd_delete::execute_inner(THD*))[0x56298a72cf93]
      sql/sql_select.cc:34319(Sql_cmd_dml::execute(THD*))[0x56298aa23150]
      sql/sql_parse.cc:4415(mysql_execute_command(THD*, bool))[0x56298a82be13]
      sql/sql_parse.cc:7901(mysql_parse(THD*, char*, unsigned int, Parser_state*))[0x56298a844990]
      sql/sql_parse.cc:1905(dispatch_command(enum_server_command, THD*, char*, unsigned int, bool))[0x56298a81aef2]
      sql/sql_parse.cc:1416(do_command(THD*, bool))[0x56298a817b89]
      sql/sql_connect.cc:1415(do_handle_one_connection(CONNECT*, bool))[0x56298ad2c3a8]
      sql/sql_connect.cc:1329(handle_one_connection)[0x56298ad2befb]
      perfschema/pfs.cc:2200(pfs_spawn_thread)[0x56298ba56340]
      nptl/pthread_create.c:478(start_thread)[0x7f094d5f6609]
       
      Query (0x6290001092a8): DELETE FROM t1 WHERE v2 +v3 > 'a'
      

      CREATE TABLE t1 (
        id int, 
        v2 int AS (id),
        v3 int AS (id+0),
        a1 int AS (v2 + v3),
        KEY a1 (a1)
      );
      INSERT into t1(id) values (2),(2);
      UPDATE t1 set id=1 WHERE v2 +v3 > 'a' ;
      

      /src/sql/field.cc:2313: virtual my_decimal* Field_int::val_decimal(my_decimal*): Assertion `marked_for_read()' failed.
      250113 18:12:54 [ERROR] mysqld got signal 6 ;
       
      Server version: 11.8.0-MariaDB-debug-log source revision: 75773e1d28877d7f3c4599b554921c472adcc6bb
       
      /lib/x86_64-linux-gnu/libc.so.6(+0x33fd6)[0x7f98ca744fd6]
      sql/field.cc:2314(Field_int::val_decimal(my_decimal*))[0x56457f453210]
      sql/my_decimal.cc:387(my_decimal::my_decimal(Field*))[0x56457f964977]
      sql/sql_type.h:5203(Type_handler_decimal_result::stored_field_cmp_to_item(THD*, Field*, Item*) const)[0x56457efc2fc6]
      sql/item.cc:10419(stored_field_cmp_to_item(THD*, Field*, Item*))[0x56457f59d3d0]
      sql/opt_range.cc:2016(SEL_ARG_GT::SEL_ARG_GT(THD*, unsigned char const*, KEY_PART const*, Field*, Item*))[0x56457e7db9d7]
      sql/opt_range.cc:9495(Field::stored_field_make_mm_leaf(RANGE_OPT_PARAM*, KEY_PART*, scalar_comparison_op, Item*))[0x56457e78f6eb]
      sql/opt_range.cc:9424(Field::get_mm_leaf_int(RANGE_OPT_PARAM*, KEY_PART*, Item_bool_func const*, scalar_comparison_op, Item*, bool))[0x56457e78eb4c]
      sql/field.h:2626(Field_int::get_mm_leaf(RANGE_OPT_PARAM*, KEY_PART*, Item_bool_func const*, scalar_comparison_op, Item*))[0x56457efcc023]
      sql/opt_range.cc:9205(Item_bool_func::get_mm_leaf(RANGE_OPT_PARAM*, Field*, KEY_PART*, Item_func::Functype, Item*))[0x56457e78c55e]
      sql/opt_range.cc:9022(Item_bool_func::get_mm_parts(RANGE_OPT_PARAM*, Field*, Item_func::Functype, Item*))[0x56457e78a264]
      sql/item_cmpfunc.h:514(Item_bool_func2_with_rev::get_func_mm_tree(RANGE_OPT_PARAM*, Field*, Item*))[0x56457e7cf5aa]
      sql/opt_range.cc:8681(Item_bool_func::get_full_func_mm_tree(RANGE_OPT_PARAM*, Item_field*, Item*))[0x56457e786a96]
      sql/item_cmpfunc.h:219(Item_bool_func::get_full_func_mm_tree_for_args(RANGE_OPT_PARAM*, Item*, Item*))[0x56457e7cecad]
      sql/item_cmpfunc.h:542(Item_bool_func2_with_rev::get_mm_tree(RANGE_OPT_PARAM*, Item**))[0x56457e7cf9b6]
      sql/opt_range.cc:2942(SQL_SELECT::test_quick_select(THD*, Bitmap<64u>, unsigned long long, unsigned long long, bool, bool, bool, bool, Item_func::Bitmap))[0x56457e761375]
      sql/opt_range.h:1909(SQL_SELECT::check_quick(THD*, bool, unsigned long long, Item_func::Bitmap))[0x56457ea17457]
      sql/sql_update.cc:514(Sql_cmd_update::update_single_table(THD*))[0x56457eec93ec]
      sql/sql_update.cc:3157(Sql_cmd_update::execute_inner(THD*))[0x56457eee2e6b]
      sql/sql_select.cc:34319(Sql_cmd_dml::execute(THD*))[0x56457ed0b150]
      sql/sql_parse.cc:4415(mysql_execute_command(THD*, bool))[0x56457eb13e13]
      sql/sql_parse.cc:7901(mysql_parse(THD*, char*, unsigned int, Parser_state*))[0x56457eb2c990]
      sql/sql_parse.cc:1905(dispatch_command(enum_server_command, THD*, char*, unsigned int, bool))[0x56457eb02ef2]
      sql/sql_parse.cc:1416(do_command(THD*, bool))[0x56457eaffb89]
      sql/sql_connect.cc:1415(do_handle_one_connection(CONNECT*, bool))[0x56457f0143a8]
      sql/sql_connect.cc:1329(handle_one_connection)[0x56457f013efb]
      perfschema/pfs.cc:2200(pfs_spawn_thread)[0x56457fd3e340]
      nptl/pthread_create.c:478(start_thread)[0x7f98cacf5609]
       
      Query (0x6290001092a8): UPDATE t1 set id=1 WHERE v2 +v3 > 'a'
      

      Attachments

        Issue Links

          Activity

            People

              psergei Sergei Petrunia
              alice Alice Sherepa
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1h
                  1h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.