MDEV-35833: Assertion `marked_for_read()' failed for query with vcols

When replacing VCOL_EXPR with VCOL_FIELD, add VCOL_FIELD to table's read_set.